--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "wdio": "wdio run ./wdio.conf.ts"
+    "wdio": "wdio run ./wdio.conf.ts",
+    "demo:test": "set headless=Y && npx wdio config/wdio.test.config.ts  --enable-chrome-browser-cloud-management --cucumberOpts.tagExpression=@demo ",
+    "smoke:test": "set headless=Y && npx wdio config/.test.conf.ts --cucumberOpts.tagExpression=@smoke",
+    "demo:uat": "set headless=N && npx wdio config/wdio.uat.conf.ts --cucumberOpts.tagExpression=@demo",
+    "smoke:uat": "set headless=Y && npx wdio config/wdio.uat.conf.ts --cucumberOpts.tagExpression=@smoke",
+    "smoke": "set headless=Y && npx wdio wdio.conf.ts --cucumberOpts.tagExpression=@cucumber"
   },
   "keywords": [
     "test",
@@ -23,6 +28,8 @@
     "@wdio/local-runner": "^8.33.1",
     "@wdio/spec-reporter": "^8.32.4",
     "chai": "^5.1.0",
+    "chromedriver": "^123.0.0",
+    "dotenv": "^16.4.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.2"
   },
