--- a/.github/workflows/wdio.ci2.yml
+++ b/.github/workflows/wdio.ci2.yml
@@ -4,9 +4,9 @@
 # documentation.
 
 # This workflow will install Deno then run `deno lint` and `deno test`.
-# For more information see: https://github.com/denoland/setup-deno
-
-name: Deno
+# For more information see: https://github.com/denoland/setup-deno 
+          
+name: CI
 
 on:
   push:
@@ -25,18 +25,8 @@ jobs:
       - name: Setup repo
         uses: actions/checkout@v3
 
-      - name: Setup Deno
-        # uses: denoland/setup-deno@v1
-        uses: denoland/setup-deno@61fe2df320078202e33d7d5ad347e7dcfa0e8f31  # v1.1.2
-        with:
-          deno-version: v1.x
-
-      # Uncomment this step to verify the use of 'deno fmt' on each commit.
-      # - name: Verify formatting
-      #   run: deno fmt --check
-
-      - name: Run linter
-        run: deno lint
-
       - name: Run tests
         run: echo hello world !!!
+
+# a set of command using the runner shell!
+      - name: run a multi-line script
