--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/chai": "^4.3.12",
+    "@types/mssql": "^9.1.5",
     "@types/supertest": "^6.0.2",
     "@wdio/allure-reporter": "^8.32.4",
     "@wdio/cli": "^8.33.1",
@@ -31,6 +32,8 @@
     "chai": "^5.1.0",
     "chromedriver": "^123.0.1",
     "dotenv": "^16.4.5",
+    "msnodesqlv8": "^4.1.2",
+    "mssql": "^10.0.2",
     "supertest": "^6.3.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.2",
