--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "dotenv": "^16.4.5",
     "msnodesqlv8": "^4.1.2",
     "mssql": "^10.0.2",
-    "supertest": "^6.3.4",
+    "supertest": "^7.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.2",
     "wdio-chromedriver-service": "^8.1.1",
@@ -42,6 +42,7 @@
     "winston": "^3.13.0"
   },
   "dependencies": {
+    "log4js": "^6.9.1",
     "save-dev": "^0.0.1-security"
   }
 }
